# CMB_2D_Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: Conan.cmake
include/: Component.hpp  Game.hpp  Input.hpp  Object.hpp  Scene.hpp  SceneGame.hpp  SceneSplash.hpp  SceneStateMachine.hpp  Window.hpp
include/Components/: KeyboardMovement.hpp  Sprite.hpp
include/Data/: Player.hpp
include/Engine/: Animation.hpp  Bitmask.hpp  Debug.hpp  Game.hpp  GameContext.hpp  Input.hpp  ObjectCollection.hpp  ResourceAllocator.hpp  ResourceManager.hpp  Scene.hpp  SceneStateMachine.hpp  Tile.hpp  TileMapParser.hpp  Utilities.hpp  Window.hpp  WorkingDirectory.hpp
include/Engine/ECS/: Component.hpp  Object.hpp
include/Engine/Utilities/: Quadtree.hpp
res/: tilemap.tmx  tilemap_1.tmx  tilemap_2.tmx
src/: Bitmask.cpp  CMakeLists.txt  Game.cpp  Input.cpp  Main.cpp  Object.cpp  SceneGame.cpp  SceneSplash.cpp  SceneStateMachine.cpp  Window.cpp  WorkingDirectory.cpp
src/Components/: CMakeLists.txt  KeyboardMovement.cpp  Sprite.cpp
src/Engine/: Animation.cpp  Bitmask.cpp  CMakeLists.txt  Debug.cpp  Game.cpp  Input.cpp  Main.cpp  ObjectCollection.cpp  ResourceManager.cpp  SceneStateMachine.cpp  TileMapParser.cpp  Window.cpp  WorkingDirectory.cpp
src/Engine/ECS/: CMakeLists.txt  Object.cpp  Transform.cpp
src/Engine/ECS/Components/: CMakeLists.txt  C_Animation.cpp  C_BoxCollider.cpp  C_Collider.cpp  C_Drawable.cpp  C_InstanceID.cpp  C_KeyboardMovement.cpp  C_Sprite.cpp  C_Transform.cpp
src/Engine/ECS/Systems/: CMakeLists.txt  S_Collidable.cpp  S_Drawable.cpp
src/Engine/Utilities/: CMakeLists.txt  Quadtree.cpp
(+10 files in other folders)
